frontend + backend : completed. Readme : Updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,19 @@
-<div class="container">
-  <div class="jumbotron">
-    To-do List
+<div class="card shadow col-md-4 col-10 mx-auto p-2 mt-4">
+  <div class="card-body">
+    <div class="container mt-2">
+      <div class="card  bg-warning">
+        <div class="card-body">
+          <div class="h3 text-white">To-do List</div>
+        </div>
+      </div>
+      <main>
+        <app-todos></app-todos>
+      </main>
+      <footer></footer>
+    </div>
   </div>
-  <main>
-    <app-todos></app-todos>
-  </main>
-  <footer></footer>
 </div>
+
+
+
+
